--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -1,1 +1,6 @@
-<p>layout works!</p>
+<mat-toolbar class="custom-toolbar">
+  <img src="medianet.png" alt="img" width="240px" />
+  <span class="example-spacer"></span>
+  <button mat-raised-button (click)="navigateToAddForm()">ADD FORM</button>
+</mat-toolbar>
+<router-outlet></router-outlet>
