--- a/src/app/pages/add-form/add-form.component.html
+++ b/src/app/pages/add-form/add-form.component.html
@@ -18,7 +18,10 @@
   </mat-card-content>
 </mat-card>
 
-<div *ngFor="let question of questions; let i = index" class="form-question">
+<div
+  *ngFor="let question of questions; let i = index; trackBy: trackByIndex"
+  class="form-question"
+>
   <mat-card class="question-card">
     <div class="card-header"></div>
     <mat-card-content>
@@ -34,9 +37,14 @@
         <div class="options-container">
           <mat-radio-group [(ngModel)]="question.answer">
             <div
-              *ngFor="let option of question.options; let j = index"
+              *ngFor="
+                let option of question.options;
+                let j = index;
+                trackBy: trackByIndex
+              "
               class="option-item"
             >
+              
               <mat-radio-button [value]="option">{{ option }}</mat-radio-button>
               <input
                 matInput
@@ -44,6 +52,9 @@
                 [(ngModel)]="question.options[j]"
                 class="option-input"
               />
+              <button mat-icon-button color="warn" (click)="removeOption(i, j)">
+                <mat-icon>close</mat-icon>
+              </button>
             </div>
           </mat-radio-group>
           <button mat-icon-button color="primary" (click)="addOption(i)">
