--- a/src/app/pages/add-form/add-form.component.html
+++ b/src/app/pages/add-form/add-form.component.html
@@ -3,7 +3,7 @@
   <mat-card-content>
     <form class="form">
       <div class="form-header">
-        <mat-form-field class="full-width question-input">
+        <mat-form-field class="full-width form-title">
           <input matInput placeholder="Form Title" name="formTitle" />
         </mat-form-field>
         <mat-form-field class="full-width">
@@ -26,49 +26,62 @@
     <div class="card-header"></div>
     <mat-card-content>
       <div class="question-container">
-        <mat-form-field class="question-input">
-          <input
-            matInput
-            placeholder="Question"
-            [(ngModel)]="question.text"
-            name="question{{ i }}"
-          />
-        </mat-form-field>
+        <div class="question-header">
+          <mat-form-field class="question-input">
+            <input
+              matInput
+              placeholder="Question"
+              [(ngModel)]="question.text"
+              name="question{{ i }}"
+            />
+          </mat-form-field>
+          <mat-form-field class="question-type-select">
+            <mat-select [(ngModel)]="question.type" placeholder="Select type">
+              <mat-option value="radio">Radio</mat-option>
+              <mat-option value="input">Input</mat-option>
+            </mat-select>
+          </mat-form-field>
+        </div>
         <div class="options-container">
-          <mat-radio-group [(ngModel)]="question.answer">
-            <div
-              *ngFor="
-                let option of question.options;
-                let j = index;
-                trackBy: trackByIndex
-              "
-              class="option-item"
-            >
-              
-              <mat-radio-button [value]="option">{{ option }}</mat-radio-button>
+          <ng-container *ngIf="question.type === 'radio'; else inputTemplate">
+            <mat-radio-group [(ngModel)]="question.answer">
+              <div
+                *ngFor="
+                  let option of question.options;
+                  let j = index;
+                  trackBy: trackByIndex
+                "
+                class="option-item"
+              >
+                <mat-radio-button [value]="option">{{ option }}</mat-radio-button>
+                <input
+                  matInput
+                  placeholder="Option"
+                  [(ngModel)]="question.options[j]"
+                  class="option-input"
+                />
+                <button mat-icon-button (click)="removeOption(i, j)">
+                  <mat-icon>remove_circle</mat-icon>
+                </button>
+              </div>
+            </mat-radio-group>
+            <button mat-button (click)="addOption(i)">+ Add Option</button>
+          </ng-container>
+          <ng-template #inputTemplate>
+            <mat-form-field class="input-answer">
               <input
                 matInput
-                placeholder="Option"
-                [(ngModel)]="question.options[j]"
-                class="option-input"
+                placeholder="Answer"
+                [(ngModel)]="question.answer"
               />
-              <button mat-icon-button color="warn" (click)="removeOption(i, j)">
-                <mat-icon>close</mat-icon>
-              </button>
-            </div>
-          </mat-radio-group>
-          <button mat-icon-button color="primary" (click)="addOption(i)">
-            <mat-icon>add</mat-icon>
+            </mat-form-field>
+          </ng-template>
+        </div>
+        <div class="question-footer">
+          <button mat-icon-button (click)="removeQuestion(i)">
+            <mat-icon>delete</mat-icon>
           </button>
         </div>
-        <button
-          mat-icon-button
-          color="warn"
-          class="delete-button"
-          (click)="removeQuestion(i)"
-        >
-          <mat-icon>delete</mat-icon>
-        </button>
       </div>
     </mat-card-content>
   </mat-card>
