--- a/src/app/pages/add-form/add-form.component.html
+++ b/src/app/pages/add-form/add-form.component.html
@@ -4,20 +4,20 @@
     <form class="form">
       <div class="form-header">
         <mat-form-field class="full-width form-title">
-          <input matInput placeholder="Form Title" name="formTitle" />
+          <input matInput placeholder="Form Title" name="formTitle" [(ngModel)]="formTitle" />
         </mat-form-field>
         <mat-form-field class="full-width">
           <input
             matInput
             placeholder="Form Description"
             name="formDescription"
+            [(ngModel)]="formDescription"
           />
         </mat-form-field>
       </div>
     </form>
   </mat-card-content>
 </mat-card>
-
 <div
   *ngFor="let question of questions; let i = index; trackBy: trackByIndex"
   class="form-question"
@@ -53,7 +53,9 @@
                 "
                 class="option-item"
               >
-                <mat-radio-button [value]="option">{{ option }}</mat-radio-button>
+                <mat-radio-button [value]="option">{{
+                  option
+                }}</mat-radio-button>
                 <input
                   matInput
                   placeholder="Option"
@@ -92,3 +94,4 @@
     <mat-icon>add</mat-icon>
   </button>
 </div>
+<button class="submit-button" mat-flat-button (click)="onSubmit()">Submit</button>
