--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -2,6 +2,8 @@
   <img src="medianet.png" alt="img" width="240px" />
   <span class="example-spacer"></span>
   <button mat-raised-button (click)="navigateToDashboard()">DASHBOARD</button>
-  <button class="butt-form" mat-raised-button (click)="navigateToAddForm()">ADD FORM</button>
+  <button class="butt-form" mat-raised-button (click)="navigateToAddForm()">
+    ADD FORM
+  </button>
 </mat-toolbar>
 <router-outlet></router-outlet>
