--- a/src/app/pages/form-response/form-response.component.html
+++ b/src/app/pages/form-response/form-response.component.html
@@ -1,1 +1,35 @@
-<p>form-response works!</p>
+<div class="container">
+  <mat-card class="card">
+    <mat-card-header>
+      <mat-card-title
+        ><h4>{{ form.title }}</h4></mat-card-title
+      >
+    </mat-card-header>
+    <mat-card-content>
+      <span>{{ form.description }}</span>
+
+      <div *ngFor="let question of form.questions" class="question-container">
+        <div *ngIf="question.type === 'input'">
+          <label class="question-label">{{ question.questionText }}</label>
+          <mat-form-field appearance="fill" class="full-width">
+            <input matInput type="text" />
+          </mat-form-field>
+        </div>
+        <div *ngIf="question.type === 'radio'">
+          <label class="question-label">{{ question.questionText }}</label>
+          <mat-radio-group class="radio-group">
+            <mat-radio-button
+              *ngFor="let option of question.options"
+              [value]="option.optionText"
+            >
+              {{ option.optionText }}
+            </mat-radio-button>
+          </mat-radio-group>
+        </div>
+      </div>
+    </mat-card-content>
+    <mat-card-actions class="actions">
+      <button mat-raised-button type="submit" class="butt-sub">Send</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
