ajout de reponse form

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,22 +1,23 @@
 <div class="login wrap">
+  <img src="medianet.png" alt="img" style="margin-left: 15px" />
   <form (ngSubmit)="onSubmit()">
-	<input
-	  type="text"
-	  name="email"
-	  id="email"
-	  placeholder="Email"
-	  [(ngModel)]="email"
-	  required
-	/>
-	<input
-	  type="password"
-	  name="password"
-	  id="password"
-	  placeholder="Password"
-	  [(ngModel)]="password"
-	  required
-	/>
-	<input type="button" value="Help!"/>
-	<input type="submit" value="Log in" />
+    <input
+      type="text"
+      name="email"
+      id="email"
+      placeholder="Email"
+      [(ngModel)]="email"
+      required
+    />
+    <input
+      type="password"
+      name="password"
+      id="password"
+      placeholder="Password"
+      [(ngModel)]="password"
+      required
+    />
+    <input type="button" value="Help!" />
+    <input type="submit" value="Log in" />
   </form>
 </div>
