--- a/src/app/pages/add-form/add-form.component.html
+++ b/src/app/pages/add-form/add-form.component.html
@@ -4,7 +4,12 @@
     <form class="form">
       <div class="form-header">
         <mat-form-field class="full-width form-title">
-          <input matInput placeholder="Form Title" name="formTitle" [(ngModel)]="formTitle" />
+          <input
+            matInput
+            placeholder="Form Title"
+            name="formTitle"
+            [(ngModel)]="formTitle"
+          />
         </mat-form-field>
         <mat-form-field class="full-width">
           <input
@@ -39,11 +44,13 @@
             <mat-select [(ngModel)]="question.type" placeholder="Select type">
               <mat-option value="radio">Radio</mat-option>
               <mat-option value="input">Input</mat-option>
+              <mat-option value="date">Date</mat-option>
+              <!-- New option added here -->
             </mat-select>
           </mat-form-field>
         </div>
         <div class="options-container">
-          <ng-container *ngIf="question.type === 'radio'; else inputTemplate">
+          <ng-container *ngIf="question.type === 'radio'; else otherTemplate">
             <mat-radio-group [(ngModel)]="question.answer">
               <div
                 *ngFor="
@@ -69,14 +76,28 @@
             </mat-radio-group>
             <button mat-button (click)="addOption(i)">+ Add Option</button>
           </ng-container>
-          <ng-template #inputTemplate>
-            <mat-form-field class="input-answer">
-              <input
-                matInput
-                placeholder="Answer"
-                [(ngModel)]="question.answer"
-              />
-            </mat-form-field>
+          <ng-template #otherTemplate>
+            <ng-container *ngIf="question.type === 'input'; else dateTemplate">
+              <mat-form-field class="input-answer">
+                <input
+                  matInput
+                  placeholder="Answer"
+                  [(ngModel)]="question.answer"
+                />
+              </mat-form-field>
+            </ng-container>
+            <ng-template #dateTemplate>
+              <mat-form-field class="date-answer">
+                <mat-label>Choose a date</mat-label>
+                <input matInput [matDatepicker]="picker" />
+                <mat-hint>MM/DD/YYYY</mat-hint>
+                <mat-datepicker-toggle
+                  matIconSuffix
+                  [for]="picker"
+                ></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+              </mat-form-field>
+            </ng-template>
           </ng-template>
         </div>
         <div class="question-footer">
@@ -94,4 +115,6 @@
     <mat-icon>add</mat-icon>
   </button>
 </div>
-<button class="submit-button" mat-flat-button (click)="onSubmit()">Submit</button>
+<button class="submit-button" mat-flat-button (click)="onSubmit()">
+  Submit
+</button>
