--- a/src/app/pages/form-response/form-response.component.html
+++ b/src/app/pages/form-response/form-response.component.html
@@ -1,35 +1,45 @@
 <div class="container">
   <mat-card class="card">
     <mat-card-header>
-      <mat-card-title
-        ><h4>{{ form.title }}</h4></mat-card-title
-      >
+      <mat-card-title>
+        <h4>{{ form.title }}</h4>
+      </mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <span>{{ form.description }}</span>
+      <span style="font-size: 21px">{{ form.description }}</span>
 
-      <div *ngFor="let question of form.questions" class="question-container">
-        <div *ngIf="question.type === 'input'">
-          <label class="question-label">{{ question.questionText }}</label>
-          <mat-form-field appearance="fill" class="full-width">
-            <input matInput type="text" />
-          </mat-form-field>
+      <form (ngSubmit)="onSubmit()">
+        <div *ngFor="let question of form.questions" class="question-container">
+          <div *ngIf="question.type === 'input'">
+            <label class="question-label">{{ question.questionText }}</label>
+            <mat-form-field appearance="fill" class="full-width">
+              <input matInput type="text" [(ngModel)]="responses[question.id]" name="question-{{question.id}}" />
+            </mat-form-field>
+          </div>
+          <div *ngIf="question.type === 'radio'">
+            <label class="question-label">{{ question.questionText }}</label>
+            <mat-radio-group class="radio-group" [(ngModel)]="responses[question.id]" name="question-{{question.id}}">
+              <mat-radio-button *ngFor="let option of question.options" [value]="option.optionText">
+                {{ option.optionText }}
+              </mat-radio-button>
+            </mat-radio-group>
+          </div>
+
+          <div *ngIf="question.type === 'date'">
+            <label class="question-label">{{ question.questionText }}</label>
+            <mat-form-field appearance="fill" class="full-width">
+              <mat-label>Choose a date</mat-label>
+              <input matInput [matDatepicker]="picker" [(ngModel)]="responses[question.id]" name="question-{{question.id}}" />
+              <mat-hint>MM/DD/YYYY</mat-hint>
+              <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+          </div>
         </div>
-        <div *ngIf="question.type === 'radio'">
-          <label class="question-label">{{ question.questionText }}</label>
-          <mat-radio-group class="radio-group">
-            <mat-radio-button
-              *ngFor="let option of question.options"
-              [value]="option.optionText"
-            >
-              {{ option.optionText }}
-            </mat-radio-button>
-          </mat-radio-group>
-        </div>
-      </div>
+        <mat-card-actions class="actions">
+          <button mat-raised-button type="submit" class="butt-sub">Send</button>
+        </mat-card-actions>
+      </form>
     </mat-card-content>
-    <mat-card-actions class="actions">
-      <button mat-raised-button type="submit" class="butt-sub">Send</button>
-    </mat-card-actions>
   </mat-card>
 </div>
