--- a/src/app/pages/form-response/form-response.component.scss
+++ b/src/app/pages/form-response/form-response.component.scss
@@ -1,5 +1,5 @@
 .container {
-  height: 100vh; /* Full viewport height */
+  height: 100vh; 
   background: linear-gradient(to bottom, #00add8 37%, #e8fbff 20%);
   display: flex;
   justify-content: center;
@@ -22,18 +22,18 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 10px; /* Adjust the height as needed */
-  background-color: #98eaff; /* Yellow color */
-  border-top-left-radius: 8px; /* Match the border radius of the card */
-  border-top-right-radius: 8px; /* Match the border radius of the card */
+  height: 10px; 
+  background-color: #98eaff; 
+  border-top-left-radius: 8px; 
+  border-top-right-radius: 8px;
 }
 
 .question-container {
-  margin-bottom: 40px; /* Add space between questions */
+  margin-bottom: 40px; 
 }
 
 .question-container:first-of-type {
-  margin-top: 40px; /* Add space above the first question */
+  margin-top: 40px;
 }
 
 .full-width {
@@ -41,9 +41,10 @@
 }
 
 .question-label {
-  font-weight: bold;
+  font-weight: 400;
   display: block;
-  margin-bottom: 10px;
+  margin-bottom: 11px;
+  font-size: 18px;
 }
 
 .radio-group {
@@ -54,6 +55,7 @@
 .butt-sub {
   background-color: #00add8;
   color: white;
+  margin-top: 20px;
 }
 
 .actions {
