--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -15,6 +15,16 @@
     <td mat-cell *matCellDef="let form">{{ form.description }}</td>
   </ng-container>
 
+  <!-- ID Column with Copy Button -->
+  <ng-container matColumnDef="link">
+    <th mat-header-cell *matHeaderCellDef>Link</th>
+    <td mat-cell *matCellDef="let form">
+      <button mat-icon-button (click)="copyLink(form.id)">
+        <mat-icon>content_copy</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
