--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -3,22 +3,27 @@
 </mat-toolbar>
 
 <table mat-table [dataSource]="forms" class="mat-elevation-z8">
-  <!-- Title Column -->
+  
   <ng-container matColumnDef="title">
-    <th mat-header-cell *matHeaderCellDef>Title</th>
-    <td mat-cell *matCellDef="let form">{{ form.title }}</td>
+    <th mat-header-cell *matHeaderCellDef class="mat-header-cell">Title</th>
+    <td mat-cell *matCellDef="let form" class="mat-cell">{{ form.title }}</td>
   </ng-container>
 
-  <!-- Description Column -->
   <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef>Description</th>
-    <td mat-cell *matCellDef="let form">{{ form.description }}</td>
+    <th mat-header-cell *matHeaderCellDef class="mat-header-cell">Description</th>
+    <td mat-cell *matCellDef="let form" class="mat-cell">{{ form.description }}</td>
   </ng-container>
 
-  <!-- ID Column with Copy Button -->
+  <ng-container matColumnDef="details">
+    <th mat-header-cell *matHeaderCellDef class="mat-header-cell">Details</th>
+    <td mat-cell *matCellDef="let form" class="mat-cell">
+      <button mat-button (click)="reviewForm(form.id)">Review</button>
+    </td>
+  </ng-container>
+
   <ng-container matColumnDef="link">
-    <th mat-header-cell *matHeaderCellDef>Link</th>
-    <td mat-cell *matCellDef="let form">
+    <th mat-header-cell *matHeaderCellDef class="mat-header-cell">Link</th>
+    <td mat-cell *matCellDef="let form" class="mat-cell">
       <button mat-icon-button (click)="copyLink(form.id)">
         <mat-icon>content_copy</mat-icon>
       </button>
