--- a/src/app/pages/form-response/form-response.component.scss
+++ b/src/app/pages/form-response/form-response.component.scss
@@ -6,6 +6,14 @@
   align-items: flex-start;
 }
 
+.img-logo {
+  width: 400px;
+  position: absolute;
+  display: flex;
+  margin-top: 80px;
+  justify-content: center;
+}
+
 .card {
   background-color: white;
   padding: 20px;
