--- a/src/app/pages/layout/layout.component.scss
+++ b/src/app/pages/layout/layout.component.scss
@@ -3,7 +3,7 @@
   }
 
 .custom-toolbar {
-    background-color: #5b5b5b46; /* Couleur de fond personnalisée */
+    background-color: #05060b; /* Couleur de fond personnalisée */
 }
 
 .butt-form{
