--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="custom-toolbar">
   <img src="medianet.png" alt="img" width="240px" />
   <span class="example-spacer"></span>
-  <button mat-raised-button (click)="navigateToDashboard()">DASHBOARD</button>
+  <button mat-raised-button (click)="navigateToDashboard()" class="butt">DASHBOARD</button>
   <button class="butt-form" mat-raised-button (click)="navigateToAddForm()">
     ADD FORM
   </button>
