--- a/src/app/pages/add-form/add-form.component.html
+++ b/src/app/pages/add-form/add-form.component.html
@@ -115,6 +115,8 @@
     <mat-icon>add</mat-icon>
   </button>
 </div>
-<button class="submit-button" mat-flat-button (click)="onSubmit()">
-  Submit
-</button>
+<div class="submit-button-container">
+  <button class="submit-button" mat-flat-button (click)="onSubmit()">
+    Submit
+  </button>
+</div>
