--- a/src/app/pages/add-form/add-form.component.scss
+++ b/src/app/pages/add-form/add-form.component.scss
@@ -102,6 +102,13 @@
    // margin-left: 1275px;
   }
 
+  .submit-button-container {
+    display: flex;
+    justify-content: flex-end;
+    //margin-top: 20px;
+    margin-right: 155px;
+  }
+
   .date-answer {
     width: 975px;
   }
