--- a/src/app/pages/form-detail/form-detail.component.scss
+++ b/src/app/pages/form-detail/form-detail.component.scss
@@ -14,3 +14,12 @@ ul {
   button {
     margin-left: 16px;
   }
+  
+  .page-title {
+    margin-left: 7px;
+    font-size: 22px;
+    color: #333;
+    margin-bottom: 20px;
+    border-bottom: 2px solid #ccc;
+    padding-bottom: 10px;
+  }
