--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,17 +1,20 @@
 <mat-toolbar>
-  <span>All Forms</span>
+  <span style="font-size: 28px">All Forms</span>
 </mat-toolbar>
 
 <table mat-table [dataSource]="forms" class="mat-elevation-z8">
-  
   <ng-container matColumnDef="title">
     <th mat-header-cell *matHeaderCellDef class="mat-header-cell">Title</th>
     <td mat-cell *matCellDef="let form" class="mat-cell">{{ form.title }}</td>
   </ng-container>
 
   <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef class="mat-header-cell">Description</th>
-    <td mat-cell *matCellDef="let form" class="mat-cell">{{ form.description }}</td>
+    <th mat-header-cell *matHeaderCellDef class="mat-header-cell">
+      Description
+    </th>
+    <td mat-cell *matCellDef="let form" class="mat-cell">
+      {{ form.description }}
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="details">
